Use Vue dev version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuex@3.1.1/dist/vuex.min.js"></script>
     <link rel="import" href="/src/polymer-vuex-app/polymer-vuex-app.html">
   </head>
